--- a/intro.html
+++ b/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Présentation Jupyter notebook - 3 juillet 2020" href="Jupyter_notebook.html" />
+    <link rel="next" title="JUPYTER NOTEBOOK" href="Jupyter_notebook.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -73,7 +73,7 @@
 <p class="margin-caption">Vendredi 3 juillet</p>
 </li>
   <li class="">
-    <a href="Jupyter_notebook.html">Présentation Jupyter notebook - 3 juillet 2020</a>
+    <a href="Jupyter_notebook.html">JUPYTER NOTEBOOK</a>
   </li>
 </ul>
 </nav>
@@ -165,7 +165,7 @@ Les principaux points abordés:</p>
     
     <div class='prev-next-bottom'>
         
-    <a class='right-next' id="next-link" href="Jupyter_notebook.html" title="next page">Présentation Jupyter notebook - 3 juillet 2020</a>
+    <a class='right-next' id="next-link" href="Jupyter_notebook.html" title="next page">JUPYTER NOTEBOOK</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
