--- a/search.html
+++ b/search.html
@@ -77,7 +77,7 @@
 <p class="margin-caption">Vendredi 3 juillet</p>
 </li>
   <li class="">
-    <a href="Jupyter_notebook.html">Présentation Jupyter notebook - 3 juillet 2020</a>
+    <a href="Jupyter_notebook.html">JUPYTER NOTEBOOK</a>
   </li>
 </ul>
 </nav>
